; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.time.c_dotime.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.time.c_dotime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.command = type opaque
%struct.tms = type { i64, i64, i32, i32 }

@times0 = common dso_local global i32 0, align 4
@time0 = common dso_local global i32**** null, align 8
@PS_SELF = common dso_local global i32 0, align 4
@RUSAGE_CHILDREN = common dso_local global i32 0, align 4
@RUSAGE_SELF = common dso_local global i32 0, align 4
@ru0 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dotime(i32** %0, %struct.command* %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca %struct.command*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.tms, align 8
  store i32** %0, i32*** %3, align 8
  store %struct.command* %1, %struct.command** %4, align 8
  %7 = call i32* @times(%struct.tms* %6)
  %8 = ptrtoint i32* %7 to i32
  store i32 %8, i32* %5, align 4
  %9 = getelementptr inbounds %struct.tms, %struct.tms* %6, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = getelementptr inbounds %struct.tms, %struct.tms* %6, i32 0, i32 3
  %12 = load i32, i32* %11, align 4
  %13 = sext i32 %12 to i64
  %14 = add nsw i64 %13, %10
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %11, align 4
  %16 = getelementptr inbounds %struct.tms, %struct.tms* %6, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = getelementptr inbounds %struct.tms, %struct.tms* %6, i32 0, i32 2
  %19 = load i32, i32* %18, align 8
  %20 = sext i32 %19 to i64
  %21 = add nsw i64 %20, %17
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* %18, align 8
  %23 = getelementptr inbounds %struct.tms, %struct.tms* %6, i32 0, i32 1
  store i64 0, i64* %23, align 8
  %24 = getelementptr inbounds %struct.tms, %struct.tms* %6, i32 0, i32 0
  store i64 0, i64* %24, align 8
  %25 = load i32, i32* %5, align 4
  %26 = sext i32 %25 to i64
  %27 = inttoptr i64 %26 to i32*
  %28 = load i32****, i32***** @time0, align 8
  %29 = call i32 @prusage(i32* @times0, %struct.tms* %6, i32* %27, i32**** %28)
  %30 = load %struct.command*, %struct.command** %4, align 8
  %31 = bitcast %struct.command* %30 to i32**
  %32 = call i32 @USE(i32** %31)
  %33 = load i32**, i32*** %3, align 8
  %34 = call i32 @USE(i32** %33)
  ret void
}

declare dso_local i32* @times(%struct.tms*) #1

declare dso_local i32 @prusage(i32*, %struct.tms*, i32*, i32****) #1

declare dso_local i32 @USE(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
